--- a/src/basic_cleaning/conda.yml
+++ b/src/basic_cleaning/conda.yml
@@ -1,13 +1,11 @@
-name: data_check
+name: basic_cleaning
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10.0
-  - pandas=2.1.3
-  - pytest>=7.0
-  - scipy>=1.9.3
   - pip=23.3.1
+  - pandas=1.3.5
+  - python=3.10
   - pip:
       - mlflow==2.8.1
       - wandb==0.16.0
